# frl

./: docker-compose.yml  init-mongo.js
app/: App.tsx  app.json  package-lock.json  package.json
app/src/api/: client.ts
app/src/screens/: ConversationScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
app/src/store/: conversations.ts  settings.ts
server/: CLAUDE.md  db.py  db_client.py  graph.py  main.py  memory.md  nodes.py  pyproject.toml  redis_client.py  s3.py  s3_client.py  state.py  test_main.py  test_s3.py  test_tools.py  tools.py
server/.devcontainer/: devcontainer.json
server/nodes/: __init__.py  assemble_prompt.py  describe_images.py  generate_response.py  load_long_term_memory.py  load_message_history.py  maintain_long_term_memory.py  summarize_message_history.py  update_message.py
