[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "juanchaopan",email = "p8499@126.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "black (>=26.3.1,<27.0.0)",
    "langgraph (>=1.1.2,<2.0.0)",
    "langchain (>=1.2.12,<2.0.0)",
    "boto3 (>=1.42.68,<2.0.0)",
    "fastapi[uvicorn] (>=0.135.1,<0.136.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pymongo (>=4.16.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
